fixed visual problems with words too long or chat names too long

--- a/frontend/src/components/chat/Chat.scss
+++ b/frontend/src/components/chat/Chat.scss
@@ -1,7 +1,13 @@
 .chat {
     flex: 3;
-    max-width: 440px;
+    width: 440px;
     .chatInfo {
+        span {
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            max-width: 330px;
+        }
         height: 50px;
         background-color: #5d5b8d;
         display: flex;
