--- a/frontend/src/components/chat/Chats.scss
+++ b/frontend/src/components/chat/Chats.scss
@@ -21,36 +21,26 @@
            object-fit: cover;
         }
         .userChatInfo {
-            span {
+            max-width: 170px;
+            h1 {
+                font-size: 16px;
                 font-weight: 500;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: 200px;
             }
             p {
+                font-size: 12px;
                 color: lightgray;
+                white-space: nowrap;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                max-width: 200px;
             }
         }
-    }
-    .userChat-active {
-        padding: 10px;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        background-color: #2f2d52;
-        color: white;
-        cursor: pointer;
-        
-        img {
-           width: 50px;
-           height: 50px; 
-           border-radius: 50%;
-           object-fit: cover;
-        }
-        .userChatInfo {
-            span {
-                font-weight: 500;
-            }
-            p {
-                color: lightgray;
-            }
+        &.active {
+            background-color: #2f2d52;
         }
     }
 }
