--- a/frontend/src/components/chat/Sidebar.scss
+++ b/frontend/src/components/chat/Sidebar.scss
@@ -1,4 +1,5 @@
 .sidebar {
     flex: 1;
+    width: 250px;
     background-color: #3e3c61;
 }
